# nonogram-rs

./: Cargo.toml
puzzles/: 15x15-key.yml  15x15-kinoko_5e.yml  15x15-pelecaliformes.yml  15x15-pokemon_charizard.yml  20x20-egyptian_crown.yml  5x5-nine.yml
puzzles/java_imports/: 27x23-bucks.yml  45x45-swing.yml
puzzles/picross_touch/: 10x10-anchor.yml  10x10-boir-karma.yml  10x10-elephant.yml  10x10-thumbsup.yml  15x15-birds.yml  15x15-elephant.yml  15x15-lightbulb.yml  15x15-star_5g.yml  20x20-mega_charizard_y.yml  20x20-nagery_cafe.yml  20x20-relatable_mood.yml  20x20-scorpion.yml  20x20-yin_yang.yml  25x25-amaterasu_okami.yml  25x25-banana.yml  25x25-boat.yml  25x25-bubbles.yml  25x25-eagle.yml  25x25-guaranteed_unique.yml  25x25-koala.yml  25x25-scan_me.yml  25x25-snake_den.yml  25x25-strong_winds.yml  25x25-symmetry_hell.yml  25x25-the_kid.yml  25x25-warning_very_hard.yml  25x25-winamp.yml  25x25-you_want_fries.yml  30x30-infinity_gauntlet.yml  35x35-10h10.yml  35x35-bubbles_the_whale.yml  35x35-evil_face.yml  35x35-hikari_yo.yml  35x35-jack.yml  35x35-young_toriel.yml  5x5-anchor.yml
src/: field.rs  grid.rs  main.rs  puzzle.rs  row.rs  run.rs  solver.rs  square.rs  ui.rs  util.rs
src/puzzle/: mod.rs  solver.rs
src/row/: mod.rs  solver.rs
