[package]
name = "nonogram"
version = "0.1.0"
authors = ["vmuser"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "*"
yaml-rust = "0.4"
ansi_term = "0.11"
piston = "0.49.0"
pistoncore-glutin_window = "0.63.0"
piston2d-graphics = "0.35.0"
piston2d-opengl_graphics = "0.70.0"
log = "0.4"
fern = "0.6.0"

[dependencies.clap]
version = "2"
default-features = false

